--- a/CSCA_5632_Unsupervised_Learning/fake_news_clustering.ipynb
+++ b/CSCA_5632_Unsupervised_Learning/fake_news_clustering.ipynb
@@ -66,6 +66,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6677a1b0-48db-40ad-ba4a-f2ad776d5f89",
+   "metadata": {},
+   "source": [
+    "Github Repo- [here](https://github.com/cfildish/CU_AI/tree/main/CSCA_5632_Unsupervised_Learning)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bb50ff53-1951-4e5b-b814-a6791070bb72",
    "metadata": {},
    "source": [
