--- a/CSCA_5632_Unsupervised_Learning/fake_news_clustering.ipynb
+++ b/CSCA_5632_Unsupervised_Learning/fake_news_clustering.ipynb
@@ -1480,6 +1480,61 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3a6a8223-58f5-412f-93e5-f259c2e28c25",
+   "metadata": {},
+   "source": [
+    "## Compare to Supervised Learning Model using the same Input Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "5e09ca3e-30f7-4621-858d-9f7a59f0437f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9433962264150944\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. Random Forest\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# ignore words that appear in more than 90% of the articles or in less than 10% of the articles\n",
+    "tfidf_vectorizer = TfidfVectorizer(\n",
+    "    min_df=0.05,\n",
+    "    max_df=0.95,\n",
+    "    ngram_range=(1, 2),\n",
+    "    preprocessor=' '.join, \n",
+    "    stop_words=\"english\"\n",
+    ")\n",
+    "\n",
+    "tfidf_all = tfidf_vectorizer.fit_transform(model_df[\"processed_all\"])\n",
+    "tfidf_all_DTM = pd.DataFrame(tfidf_all.toarray(), columns = tfidf_vectorizer.get_feature_names_out())\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(tfidf_all_DTM, model_df[\"label\"], test_size=0.3, random_state=42)\n",
+    "\n",
+    "rf = RandomForestClassifier(random_state=0)\n",
+    "rf.fit(X_train, y_train)\n",
+    "y_pred = rf.predict(X_test)\n",
+    "print(accuracy_score(y_pred, y_test))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "baa539cc-f4a9-4dec-b609-f69da751ce58",
+   "metadata": {},
+   "source": [
+    "It's not surprising that the supervised learning method with random forests performed much better compared to non-negative matrix factorization. The unsupervised NMF model was told to generate the two groupings with the highest seperability regardless of whether it related to the class label, while the supervised method was fit using the labels specifying fake vs real."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bc910506-38dc-44e5-a413-33169e7bff9e",
    "metadata": {},
    "source": [
