--- a/CSCA_5642_Deep_Learning/Monet_Paiting_GANs/monet_painting_gans.ipynb
+++ b/CSCA_5642_Deep_Learning/Monet_Paiting_GANs/monet_painting_gans.ipynb
@@ -93,6 +93,20 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Github"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://github.com/cfildish/CU_AI/tree/main/CSCA_5642_Deep_Learning/Monet_Paiting_GANs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "O8woygGMTRhH"
    },
